@@ -1,0 +1,4 @@
+	.section ".foo", "ax"
+	.byte	45
+	.text
+	.byte	15
